fix overflow on mobile

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -50,10 +50,6 @@
 
 	&-b {
 
-		@media screen and (max-width: 640px) {
-			min-width: 100vw;
-		}
-
 		picture {
 			display: block;
 
